main: Fix warnings when no mail client is installed

https://bugzilla.gnome.org/show_bug.cgi?id=701654